# mini-rCore

./: 404.html  Cargo.toml  chapter1.html  chapter4.html  index.html  introduction.html  print.html  run  run.sh  searchindex.js  searchindex.json
.github/workflows/: deploy-docs.yml
doc/: rCoreOS学习文档.md
docs/: book.toml
docs/book/: 404.html  chapter1.html  chapter4.html  introduction.html  print.html  searchindex.js  toc.html  toc.js
docs/src/: SUMMARY.md  chapter1.md  chapter4.md  introduction.md
os/: Cargo.toml  Makefile  build.rs  rustfmt.toml
os/scripts/: qemu-ver-check.sh
os/src/: batch.rs  config.rs  console.rs  entry.asm  lang_items.rs  link_app.S  linker-qemu.ld  loader.rs  logging.rs  main.rs  sbi.rs  stack_trace.rs  timer.rs
os/src/mm/: address.rs  heap_allocator.rs  mod.rs  page_table.rs
os/src/sync/: up.rs
os/src/syscall/: fs.rs  mod.rs  process.rs
os/src/task/: context.rs  mod.rs  switch.S  switch.rs  task.rs
os/src/trap/: context.rs  mod.rs  trap.S
src/: entry.asm  linker.ld  main.rs
user/: Cargo.toml  build.py  rustfmt.toml
user/.cargo/: config.toml
user/src/: console.rs  lang_items.rs  lib.rs  linker.ld  syscall.rs
