[package]
name = "os"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
sbi-rt = { version = "0.0.3", features = ["legacy"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
buddy_system_allocator = "0.11.0"

[profile.release]
debug = true
